--- a/src/configs/assets/scss/_themes-vars.module.scss
+++ b/src/configs/assets/scss/_themes-vars.module.scss
@@ -3,10 +3,10 @@ $paper: #ffffff;
 
 // primary
 $primaryLight: #e3f2fd;
-$primaryMain: #2196f3;
-$primaryDark: #1e88e5;
+$primaryMain: #0052CC;
+$primaryDark: #003c99;
 $primary200: #90caf9;
-$primary800: #1565c0;
+$primary800: #004080;
 
 // secondary
 $secondaryLight: #ede7f6;
@@ -27,14 +27,14 @@ $errorMain: #f44336;
 $errorDark: #c62828;
 
 // orange
-$orangeLight: #fbe9e7;
-$orangeMain: #ffab91;
+$orangeLight: #ffe8e1;
+$orangeMain: #ffa45e;
 $orangeDark: #d84315;
 
 // warning
-$warningLight: #fff8e1;
-$warningMain: #ffe57f;
-$warningDark: #ffc107;
+$warningLight: #fff7de;
+$warningMain: #ffcc00;
+$warningDark: #ff9900;
 
 // grey
 $grey50: #fafafa;
@@ -58,10 +58,10 @@ $darkLevel2: #212946; // level 2
 
 // primary dark
 $darkPrimaryLight: #e3f2fd;
-$darkPrimaryMain: #2196f3;
-$darkPrimaryDark: #1e88e5;
+$darkPrimaryMain: #0052CC;
+$darkPrimaryDark: #003c99;
 $darkPrimary200: #90caf9;
-$darkPrimary800: #1565c0;
+$darkPrimary800: #004080;
 
 // secondary dark
 $darkSecondaryLight: #d1c4e9;
